tests/core/snapshots/graphql-conformance-http-015.md_9.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "ResolveInputError: Argument `height` for field `featuredVideoPreview.video` is required"
      }
    ]
  }
}
