tests/core/snapshots/graphql-conformance-http-016.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
  @server(hostname: "0.0.0.0", port: 8001, queryValidation: false)
  @upstream(baseURL: "http://upstream/", httpCache: 42) {
  query: Query
}

type Query {
  userGroups: [User!]! @http(path: "/users")
}

type User {
  id: ID!
  name: String!
}
