tests/core/snapshots/graphql-conformance-http-017.md_1.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "edibleAnimals": [
        {
          "id": "salmon-1"
        },
        {
          "id": "salmon-2"
        },
        {
          "id": "pig-1"
        },
        {
          "id": "pig-2"
        }
      ]
    }
  }
}
